--- a/front-end/mall4m/pages/user/user.wxml
+++ b/front-end/mall4m/pages/user/user.wxml
@@ -13,11 +13,11 @@
                 <view wx:if="{{userMobile != null}}">
                     <view class='userinfo-name' wx:if="{{userMobile != null && closeEye == true}}" style="padding-right: 7vw; justify-content: flex-start;">
                         <text bindtap='toBindingPhone'>{{(userMobile+'2')}}</text>
-                        <image src="/images/icon/eye-close.png" mode="widthFix" style="width:3vw;margin-left: 2vw;" bindtap="changeEye" />
+                        <image src="{{imageUrl}}/icon/eye-close.png" mode="widthFix" style="width:3vw;margin-left: 2vw;" bindtap="changeEye" />
                     </view>
                     <view class='userinfo-name' wx:if="{{userMobile != null &&closeEye == false}}" style="padding-right: 7vw; justify-content: flex-start">
                         <text bindtap='toBindingPhone'>{{userMobile+'2'}}</text>
-                        <image src="/images/icon/eye-open.png" mode="widthFix" style="width:3vw;margin-left: 2vw" bindtap="changeEye" />
+                        <image src="{{imageUrl}}/icon/eye-open.png" mode="widthFix" style="width:3vw;margin-left: 2vw" bindtap="changeEye" />
                     </view>
                 </view>
             </view>
@@ -104,22 +104,22 @@
             </view>
             <view class='procedure'>
                 <view class='items' bindtap='toOrderListPage' data-sts="1">
-                    <image src='../../images/icon/toPay.png'></image>
+                    <image src='{{imageUrl}}/icon/toPay.png'></image>
                     <text>待支付</text>
                     <text class='num-badge' wx:if="{{orderAmount.unPay>0}}">{{orderAmount.unPay}}</text>
                 </view>
                 <view class='items' bindtap='toOrderListPage' data-sts="2">
-                    <image src='../../images/icon/toDelivery.png'></image>
+                    <image src='{{imageUrl}}/icon/toDelivery.png'></image>
                     <text>待发货</text>
                     <text class='num-badge' wx:if="{{orderAmount.payed>0}}">{{orderAmount.payed}}</text>
                 </view>
                 <view class='items' bindtap='toOrderListPage' data-sts="3">
-                    <image src='../../images/icon/toTake.png'></image>
+                    <image src='{{imageUrl}}/icon/toTake.png'></image>
                     <text>待收货</text>
                     <text class='num-badge' wx:if="{{orderAmount.consignment>0}}">{{orderAmount.consignment}}</text>
                 </view>
                 <view class='items' bindtap='toOrderListPage' data-sts="5">
-                    <image src='../../images/icon/toComment.png'></image>
+                    <image src='{{imageUrl}}/icon/toComment.png'></image>
                     <text>已完成</text>
                     <text class='num-badge' wx:if="{{orderAmount.success>0}}">{{orderAmount.success}}</text>
                 </view>
@@ -144,21 +144,21 @@
         <view class="my-menu">
             <view class='memu-item' bindtap='toCouponCenter' wx:if="{{openSource == true}}">
                 <view class="i-name">
-                    <image src='../../images/icon/getCoupon.png'></image>
+                    <image src='{{imageUrl}}/icon/getCoupon.png'></image>
                     <text>领券中心</text>
                 </view>
                 <view class='arrowhead'></view>
             </view>
             <view class='memu-item' bindtap='toMyCouponPage' wx:if="{{openSource == true}}">
                 <view class="i-name">
-                    <image src='../../images/icon/myCoupon.png'></image>
+                    <image src='{{imageUrl}}/icon/myCoupon.png'></image>
                     <text>我的优惠券</text>
                 </view>
                 <view class='arrowhead'></view>
             </view>
             <view class='memu-item' bindtap='myCollectionHandle'>
                 <view class="i-name">
-                    <image src='../../images/icon/promotion.png'></image>
+                    <image src='{{imageUrl}}/icon/promotion.png'></image>
                     <text>收藏商品</text>
                 </view>
                 <view class='arrowhead'></view>
@@ -166,7 +166,7 @@
 
             <view class='memu-item' bindtap='toAddressList'>
                 <view class="i-name">
-                    <image src='../../images/icon/myAddr.png'></image>
+                    <image src='{{imageUrl}}/icon/myAddr.png'></image>
                     <text>收货地址</text>
                 </view>
                 <view class='arrowhead'></view>
@@ -174,7 +174,7 @@
 
             <view class='memu-item' bindtap='toAboutUsPage'>
                 <view class="i-name">
-                    <image src='../../images/icon/about_line.png'></image>
+                    <image src='{{imageUrl}}/icon/about_line.png'></image>
                     <text>关于我们</text>
                 </view>
                 <view class='arrowhead'></view>
@@ -183,7 +183,7 @@
             <view class='memu-item'>
                 <button size="mini" type="default" plain="true" open-type="contact" bindcontact="handleContact" session-from="sessionFrom" class="contact-btn">联系我们</button>
                 <view class="i-name">
-                    <image src='../../images/icon/icon-msg.png'></image>
+                    <image src='{{imageUrl}}/icon/icon-msg.png'></image>
                     <text>联系我们</text>
                 </view>
                 <view class='arrowhead'></view>
