--- a/front-end/mall4m/pages/submit-order/submit-order.wxml
+++ b/front-end/mall4m/pages/submit-order/submit-order.wxml
@@ -6,7 +6,7 @@
       <view class='addr-bg ' wx:if="{{!userAddr}}">
         <view class='add-addr'>
           <view class='plus-sign-img'>
-            <image src='../../images/icon/plus-sign.png'></image>
+            <image src='{{imageUrl}}/icon/plus-sign.png'></image>
           </view>
           <text>新增收货地址</text>
         </view>
@@ -14,7 +14,7 @@
       </view>
       <view class='addr-bg whole' wx:if="{{userAddr}}">
         <view class='addr-icon'>
-          <image src='../../images/icon/addr.png'></image>
+          <image src='{{imageUrl}}/icon/addr.png'></image>
         </view>
         <view class='user-info'>
           <text class='item'>{{userAddr.receiver}}</text>
@@ -48,7 +48,7 @@
       </block>
       <!-- <view class='item-cont' bindtap='toOrderDetailPage' data-ordernum="{{item.primaryOrderNo}}">
         <view class='prod-pic'>
-          <image src='../../images/prod/pic09.jpg'></image>
+          <image src='{{imageUrl}}/prod/pic09.jpg'></image>
         </view>
         <view class='prod-info'>
           <view class='prodname'>
