--- a/front-end/mall4m/pages/orders/pages/order-detail/order-detail.wxml
+++ b/front-end/mall4m/pages/orders/pages/order-detail/order-detail.wxml
@@ -62,6 +62,15 @@
                     <text class='item-txt'>{{remarks}}</text>
                 </view>
             </view>
+
+            <!-- 订单未支付 -->
+            <view class='msg-item' wx:if="{{order.isPayed == 0}}">
+                <view class='item'>
+                    <text class='item-tit'>订单未支付</text>
+                    <text class='item-txt'></text>
+                </view>
+            </view>
+
             <view class='msg-item' wx:if="{{order.isPayed == 1}}">
                 <view class='item'>
                     <text class='item-tit'>付款时间：</text>
@@ -92,6 +101,7 @@
                 </view>
             </view>
         </view>
+
         <view class='order-msg'>
             <view class='msg-item'>
                 <view class='item'>
@@ -130,13 +140,16 @@
         </view>
 
         <!-- 底部栏 -->
-        <view class='order-detail-footer' wx:if="{{status==5||status==6}}">
-            <text class='dele-order' bindtap="deleteOrder" data-ordernum="{{orderNumber}}">删除订单</text>
+        <view class='order-detail-footer' wx:if="{{status==5||status==6||true}}">
+          <text class='dele-order' wx:if="{{status==6}}" bindtap="deleteOrder" data-ordernum="{{orderNumber}}">删除订单</text>
+          <text class='dele-order' wx:if="{{status==1}}" bindtap="onCancelOrder" data-ordernum="{{orderNumber}}">取消订单</text>
             <view class='footer-box'>
-            <text class='apply-service'><button size="mini" type="default" plain="true" open-type="contact" bindcontact="handleContact" session-from="sessionFrom" class="contact-btn">联系客服</button>联系客服</text>
-            <text class='buy-again'>再次购买</text>
+            <text class='apply-service'>
+            <button size="mini" type="default" plain="true" open-type="contact" bindcontact="handleContact" session-from="sessionFrom" class="contact-btn">联系客服</button>联系客服</text>
+            <text class='buy-again' wx:if="{{order.status==1 && order.isPayed == 0}}" bindtap="showPayTypePopup" data-ordernum="{{orderNumber}}">付款</text>
             </view>
         </view>
+
 
         <view class='prod-foot' wx:if="{{false}}">
             <view class='btn spaceBetweenFlex' >
@@ -150,5 +163,91 @@
 
     </view>
 </view>
+
+
+
+<!-- 选择支付方式弹窗 -->
+<view class="popup-hide" wx:if="{{popupShowPayType}}">
+  <view class="popup-box popup-box-pay">
+    <view class="popup-tit">
+      <text>支付方式</text>
+      <text class="close" bindtap='closePopupPayType'></text>
+    </view>
+    <view class="coupon-tabs">
+      <view class="coupon-tab {{payType==1?'on':''}}" bindtap='changePayType' data-sts='1'>微信支付</view>
+      <view class="coupon-tab {{payType==0?'on':''}}" bindtap='changePayType' data-sts='0'>余额支付</view>
+    </view>
+    <view class='popup-cnt'>
+
+      <!-- 微信支付结算 -->
+      <view class='order-msg' wx:if="{{payType==1}}">
+        <view class='msg-item'>
+          <view class='item'>
+            <view class='item-tit'>订单金额：</view>
+            <view class='item-txt price'>
+              <text class='symbol'>￥</text>
+              <text class='big-num'>{{wxs.parsePrice(actualTotal)[0]}}</text>
+              <text class='small-num'>.{{wxs.parsePrice(actualTotal)[1]}}</text>
+            </view>
+          </view>
+          <view class='item payment'>
+            <view class='item-txt price'>
+              支付金额：
+              <text class='symbol'>￥</text>
+              <text class='big-num'>{{wxs.parsePrice(actualTotal)[0]}}</text>
+              <text class='small-num'>.{{wxs.parsePrice(actualTotal)[1]}}</text>
+            </view>
+          </view>
+        </view>
+      </view>
+
+      <!-- 余额支付结算 -->
+      <view class='order-msg' wx:if="{{payType==0}}">
+        <view class='msg-item'>
+          <view class='item'>
+            <view class='item-tit'>会员卡号：</view>
+            <view class='item-txt price'>
+              <text class='big-num'>{{userBalance.cardNumber}}</text>
+            </view>
+          </view>
+
+          <view class='item'>
+            <view class='item-tit'>账户余额：</view>
+            <view class='item-txt price'>
+              <text class='symbol'>￥</text>
+              <text class='big-num'>{{wxs.parsePrice(userBalance.balance)[0]}}</text>
+              <text class='small-num'>.{{wxs.parsePrice(userBalance.balance)[1]}}</text>
+            </view>
+          </view>
+
+          <view class='item'>
+            <view class='item-tit'>本单消费：</view>
+            <view class='item-txt price'>
+              <text class='symbol'>￥</text>
+              <text class='big-num'>{{wxs.parsePrice(actualTotal)[0]}}</text>
+              <text class='small-num'>.{{wxs.parsePrice(actualTotal)[1]}}</text>
+            </view>
+          </view>
+          <view class='item payment'>
+            <view class='item-txt price'>
+              结后余额：
+              <text class='symbol'>￥</text>
+              <text class='big-num'>{{wxs.parsePrice(actualTotal)[0]}}</text>
+              <text class='small-num'>.{{wxs.parsePrice(actualTotal)[1]}}</text>
+            </view>
+          </view>
+        </view>
+      </view>
+
+    </view>
+    <view class="coupon-ok" wx:if="{{payType==1}}">
+      <text bindtap='toPay'>微信支付{{wxs.toPrice(actualTotal)}}</text>
+    </view>
+    <view class="coupon-ok {{userBalance.balance < actualTotal?'disabled':''}}" wx:if="{{payType==0}}">
+      <text bindtap='toPay'>{{userBalance.balance < actualTotal?'余额不足':'余额支付'}}{{wxs.toPrice(actualTotal)}}</text>
+    </view>
+  </view>
+</view>
+
 <wxs module="wxs" src="../../../../wxs/number.wxs" />
 <wxs module="dict" src="../../../../wxs/dict.wxs" />
