--- a/front-end/mall4m/pages/orders/pages/order-detail/order-detail.wxss
+++ b/front-end/mall4m/pages/orders/pages/order-detail/order-detail.wxss
@@ -1,301 +1,449 @@
 /* pages/order-detail/order-detail.wxss */
 
 page {
-    background: #f4f4f4;
+  background: #f4f4f4;
 }
 
 .order-detail {
-    margin-bottom: 120rpx;
+  margin-bottom: 120rpx;
 }
 
 .order-detail .delivery-addr {
-    padding: 20rpx 30rpx;
-    background: #fff;
+  padding: 20rpx 30rpx;
+  background: #fff;
 }
 
 .order-detail .delivery-addr .user-info {
-    line-height: 48rpx;
-    word-wrap: break-word;
-    word-break: break-all;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    display: -webkit-box;
-    -webkit-line-clamp: 1;
-    -webkit-box-orient: vertical;
+  line-height: 48rpx;
+  word-wrap: break-word;
+  word-break: break-all;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 1;
+  -webkit-box-orient: vertical;
 }
 
 .order-detail .delivery-addr .user-info .item {
-    font-size: 28rpx;
-    margin-right: 30rpx;
-    vertical-align: top;
-    display: inline-block;
+  font-size: 28rpx;
+  margin-right: 30rpx;
+  vertical-align: top;
+  display: inline-block;
 }
 
 .order-detail .delivery-addr .addr {
-    font-size: 26rpx;
-    line-height: 36rpx;
-    color: #999;
+  font-size: 26rpx;
+  line-height: 36rpx;
+  color: #999;
 }
 
 /* 商品列表 */
 
 .prod-item {
-    background-color: #fff;
-    margin-top: 15rpx;
-    font-size: 28rpx;
+  background-color: #fff;
+  margin-top: 15rpx;
+  font-size: 28rpx;
 }
 
 .prod-item .item-cont .prod-pic image {
-    width: 180rpx;
-    height: 180rpx;
+  width: 180rpx;
+  height: 180rpx;
 }
 
 .prod-item .item-cont {
-    display: flex;
-    align-items: center;
-    padding: 30rpx;
-    border-top: 2rpx solid #f1f1f1;
+  display: flex;
+  align-items: center;
+  padding: 30rpx;
+  border-top: 2rpx solid #f1f1f1;
 }
 
 .prod-item .item-cont .prod-pic {
-    font-size: 0;
-    display: block;
-    width: 160rpx;
-    height: 160rpx;
-    overflow: hidden;
-    background: #fff;
-    margin-right: 16rpx;
-    border-radius: 2vw;
+  font-size: 0;
+  display: block;
+  width: 160rpx;
+  height: 160rpx;
+  overflow: hidden;
+  background: #fff;
+  margin-right: 16rpx;
+  border-radius: 2vw;
 }
 
 .prod-item .item-cont .prod-pic image {
-    width: 100%;
-    height: 100%;
+  width: 100%;
+  height: 100%;
 }
 
 .prod-item .item-cont .prod-info {
-    margin-left: 10rpx;
-    font-size: 28rpx;
-    width: 100%;
-    position: relative;
-    height: 80px;
-    -webkit-flex: 1;
-    -ms-flex: 1;
-    -webkit-box-flex: 1;
-    -moz-box-flex: 1;
-    flex: 1;
+  margin-left: 10rpx;
+  font-size: 28rpx;
+  width: 100%;
+  position: relative;
+  height: 80px;
+  -webkit-flex: 1;
+  -ms-flex: 1;
+  -webkit-box-flex: 1;
+  -moz-box-flex: 1;
+  flex: 1;
 }
 
 .prod-item .item-cont .prod-info .prodname {
-    font-size: 28rpx;
-    line-height: 40rpx;
-    max-height: 86rpx;
-    overflow: hidden;
-    display: -webkit-box;
-    -webkit-line-clamp: 1;
-    -webkit-box-orient: vertical;
-    text-overflow: ellipsis;
-    word-break: break-all;
+  font-size: 28rpx;
+  line-height: 40rpx;
+  max-height: 86rpx;
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-line-clamp: 1;
+  -webkit-box-orient: vertical;
+  text-overflow: ellipsis;
+  word-break: break-all;
 }
 
 .prod-item .item-cont .prod-info .prod-info-cont {
-    position: relative;
-    color: #999;
-    margin-top: 10rpx;
-    font-size: 24rpx;
+  position: relative;
+  color: #999;
+  margin-top: 10rpx;
+  font-size: 24rpx;
 }
 
 .prod-item .item-cont .prod-info .prod-info-cont .info-item {
-    color: #999;
-    height: 28rpx;
-    margin-top: 10rpx;
-    font-size: 30rpx;
-    overflow: hidden;
-    display: -webkit-box;
-    -webkit-line-clamp: 1;
-    -webkit-box-orient: vertical;
-    text-overflow: ellipsis;
-    word-break: break-all;
-    width: 70%;
+  color: #999;
+  height: 28rpx;
+  margin-top: 10rpx;
+  font-size: 30rpx;
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-line-clamp: 1;
+  -webkit-box-orient: vertical;
+  text-overflow: ellipsis;
+  word-break: break-all;
+  width: 70%;
 }
 
 .prod-item .item-cont .prod-info .prod-info-cont .number {
-    float: left;
-    margin-right: 20rpx;
+  float: left;
+  margin-right: 20rpx;
 }
 
 .prod-item .price-nums {
-    margin-top: 30rpx;
+  margin-top: 30rpx;
 }
 
 .prod-item .price-nums .prodprice {
-    color: #333;
-    height: 50rpx;
-    line-height: 50rpx;
-    font-size: 24rpx;
-    float: left;
+  color: #333;
+  height: 50rpx;
+  line-height: 50rpx;
+  font-size: 24rpx;
+  float: left;
 }
 
 .prod-item .price-nums .btn-box {
-    float: right;
-    text-align: right;
+  float: right;
+  text-align: right;
 }
 
 .prod-item .price-nums .btn-box .btn {
-    padding: 6rpx 30rpx;
-    line-height: 36rpx;
-    margin-left: 20rpx;
-    font-size: 24rpx;
-    display: inline-block;
-    border: 2rpx solid #e4e4e4;
-    border-radius: 50rpx;
+  padding: 6rpx 30rpx;
+  line-height: 36rpx;
+  margin-left: 20rpx;
+  font-size: 24rpx;
+  display: inline-block;
+  border: 2rpx solid #e4e4e4;
+  border-radius: 50rpx;
 }
 
 /* 
 订单信息 */
 
 .order-msg {
-    background: #fff;
-    margin-top: 15rpx;
-    font-size: 28rpx;
+  background: #fff;
+  margin-top: 15rpx;
+  font-size: 28rpx;
 }
 
 .order-msg .msg-item {
-    padding: 20rpx;
-    border-top: 2rpx solid #f1f1f1;
+  padding: 20rpx;
+  border-top: 2rpx solid #f1f1f1;
 }
 
 .order-msg .msg-item:first-child {
-    border: 0;
+  border: 0;
 }
 
 .order-msg .msg-item .item {
-    display: flex;
-    padding: 10rpx 0;
-    align-items: center;
+  display: flex;
+  padding: 10rpx 0;
+  align-items: center;
 }
 
 .order-msg .msg-item .item.payment {
-    border-top: 2rpx solid #f1f1f1;
-    color: #eba524;
-    padding-top: 30rpx;
+  border-top: 2rpx solid #f1f1f1;
+  color: #eba524;
+  padding-top: 30rpx;
 }
 
 .order-msg .msg-item .item .item-tit {
-    color: #999;
-    line-height: 48rpx;
+  color: #999;
+  line-height: 48rpx;
 }
 
 .order-msg .msg-item .item .item-txt {
-    flex: 1;
-    line-height: 48rpx;
+  flex: 1;
+  line-height: 48rpx;
 }
 
 .order-msg .msg-item .item .copy-btn {
-    display: block;
-    margin-left: 20rpx;
-    border: 2rpx solid #e4e4e4;
-    padding: 6rpx 24rpx;
-    border-radius: 50rpx;
-    font-size: 24rpx;
-    line-height: 28rpx;
+  display: block;
+  margin-left: 20rpx;
+  border: 2rpx solid #e4e4e4;
+  padding: 6rpx 24rpx;
+  border-radius: 50rpx;
+  font-size: 24rpx;
+  line-height: 28rpx;
 }
 
 .order-msg .msg-item .item .item-txt.price {
-    text-align: right;
+  text-align: right;
 }
 
 /* 底部栏 */
 
 .order-detail-footer {
-    position: fixed;
-    bottom: 0;
-    width: 100%;
-    max-width: 750rpx;
-    background: #fff;
-    margin: auto;
-    display: -webkit-flex;
-    display: -webkit-box;
-    display: -moz-box;
-    display: -ms-flexbox;
-    display: flex;
-    padding: 22rpx 0;
-    font-size: 26rpx;
-    box-shadow: 0 -1px 3px rgba(0, 0, 0, 0.05);
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  max-width: 750rpx;
+  background: #fff;
+  margin: auto;
+  display: -webkit-flex;
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 22rpx 0;
+  font-size: 26rpx;
+  box-shadow: 0 -1px 3px rgba(0, 0, 0, 0.05);
 }
 
 .order-detail-footer .dele-order {
-    margin-left: 20rpx;
-    line-height: 60rpx;
-    display: block;
-    margin-right: 20rpx;
-    width: 150rpx;
-    text-align: center;
+  margin-left: 20rpx;
+  line-height: 60rpx;
+  display: block;
+  margin-right: 20rpx;
+  width: 150rpx;
+  text-align: center;
 }
 
 .order-detail-footer .footer-box {
-    flex: 1;
-    text-align: right;
-    line-height: 60rpx;
+  flex: 1;
+  text-align: right;
+  line-height: 60rpx;
 }
 
 .order-detail-footer .footer-box .buy-again {
-    font-size: 26rpx;
-    color: #fff;
-    background: #f38d08;
-    border-radius: 50rpx;
-    padding: 2vw 5vw;
-    margin-right: 3vw;
+  font-size: 26rpx;
+  color: #fff;
+  background: #f38d08;
+  border-radius: 50rpx;
+  padding: 2vw 5vw;
+  margin-right: 3vw;
 }
 
 .order-detail-footer .footer-box .apply-service {
-    font-size: 26rpx;
-    border-radius: 50rpx;
-    padding:2vw 5vw;
-    border: 1px solid #e4e4e4;
-    margin-right: 3vw;
+  font-size: 26rpx;
+  border-radius: 50rpx;
+  padding: 2vw 5vw;
+  border: 1px solid #e4e4e4;
+  margin-right: 3vw;
 }
 
 .clearfix:after {
-    content: " ";
-    display: table;
-    clear: both;
+  content: " ";
+  display: table;
+  clear: both;
 }
 
 /* 根据状态显示不同的颜色 */
 
 .order-state {
-    height: 70rpx;
-    line-height: 70rpx;
-    text-align: right;
-    margin-right: 20rpx;
+  height: 70rpx;
+  line-height: 70rpx;
+  text-align: right;
+  margin-right: 20rpx;
 }
 
 .order-state .order-sts {
-    color: #eba524;
-    font-size: 28rpx;
+  color: #eba524;
+  font-size: 28rpx;
 }
 
 .order-state .order-sts.gray {
-    color: #999;
-    height: 32rpx;
-    line-height: 32rpx;
+  color: #999;
+  height: 32rpx;
+  line-height: 32rpx;
 }
 
 .order-state .order-sts.normal {
-    color: #333;
+  color: #333;
 }
 
 /* 客服按钮样式 */
 .contact-btn {
-    display: inline-block;
-    width: 100%;
-    background: salmon;
-    opacity: 0;
+  display: inline-block;
+  width: 100%;
+  background: salmon;
+  opacity: 0;
 }
 
-.button{
-    width:30vw;
-    background-color: #fff;
-    border-radius: 3vw;
+.button {
+  width: 30vw;
+  background-color: #fff;
+  border-radius: 3vw;
+}
+
+
+
+/** 优惠券弹窗 **/
+
+.popup-hide {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: 999;
+  background-color: rgba(0, 0, 0, 0.3);
+}
+
+.popup-box {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 80%;
+  overflow: hidden;
+  background-color: #fff;
+}
+
+.popup-tit {
+  position: relative;
+  height: 46px;
+  line-height: 46px;
+  padding-left: 10px;
+  font-size: 16px;
+  color: #333;
+  font-weight: bold;
+}
+
+.close {
+  color: #aaa;
+  border-radius: 12px;
+  line-height: 20px;
+  text-align: center;
+  height: 20px;
+  width: 20px;
+  font-size: 18px;
+  padding: 1px;
+  top: 10px;
+  right: 10px;
+  position: absolute;
+}
+
+.close::before {
+  content: "\2716";
+}
+
+.coupon-tabs {
+  display: flex;
+  font-size: 14px;
+  justify-content: space-around;
+  border-bottom: 1px solid #f2f2f2;
+}
+
+.coupon-tab {
+  padding: 10px 0;
+}
+
+.coupon-tab.on {
+  border-bottom: 2px solid #eba524;
+  font-weight: 600;
+}
+
+.popup-cnt {
+  height: calc(100% - 88px);
+  overflow: auto;
+  padding: 0 10px;
+  background: #f4f4f4;
+}
+
+.coupon-ok {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  height: 60px;
+  line-height: 50px;
+  font-size: 14px;
+  text-align: center;
+  box-shadow: 0px -1px 1px #ddd;
+  background: rgba(255, 255, 255, 0.9);
+}
+
+.coupon-ok text {
+  border-radius: 20px;
+  display: inline-block;
+  height: 20px;
+  line-height: 20px;
+  width: 450rpx;
+  padding: 7px;
+  background: -o-linear-gradient(right, #f45c43, #eb2444);
+  background: linear-gradient(right, #f45c43, #eb2444);
+  background: -webkit-linear-gradient(right, #f45c43, #eb2444);
+  color: #fff;
+  box-shadow: -1px 3px 3px #aaa;
+}
+
+.botm-empty {
+  height: 60px;
+}
+
+/*checkbox 选项框大小  */
+
+checkbox .wx-checkbox-input {
+  border-radius: 50%;
+  width: 35rpx;
+  height: 35rpx;
+}
+
+/*checkbox选中后样式  */
+
+checkbox .wx-checkbox-input.wx-checkbox-input-checked {
+  background: #eba524;
+  border-color: #eba524;
+}
+
+/*checkbox选中后图标样式  */
+
+checkbox .wx-checkbox-input.wx-checkbox-input-checked::before {
+  text-align: center;
+  font-size: 22rpx;
+  color: #fff;
+  background: transparent;
+  transform: translate(-50%, -50%) scale(1);
+  -webkit-transform: translate(-50%, -50%) scale(1);
+}
+
+.popup-box-pay {
+  height: 48% !important;
+}
+
+.disabled text {
+  border-radius: 20px;
+  display: inline-block;
+  height: 20px;
+  line-height: 20px;
+  width: 450rpx;
+  padding: 7px;
+  background: -o-linear-gradient(right, #aaa, #aaa);
+  background: linear-gradient(right, #aaa, #aaa);
+  background: -webkit-linear-gradient(right, #aaa, #aaa);
+  color: #fff;
+  box-shadow: -1px 3px 3px #aaa;
 }
