--- a/front-end/mall4m/pages/balance/pages/user-balance-detail/user-balance-detail.wxml
+++ b/front-end/mall4m/pages/balance/pages/user-balance-detail/user-balance-detail.wxml
@@ -19,7 +19,7 @@
     <view class="consumeList">
         <view class="consumeItem" wx:for="{{userBalanceDetail}}">
             <view>
-                <view >{{item.useBalance>0?'+'+wxs.toPrice(item.useBalance):'-'+wxs.toPrice(item.useBalance)}}</view>
+                <view >{{item.useBalance>0?'+'+wxs.toPrice(item.useBalance): wxs.toPrice(item.useBalance)}}</view>
                 <view >余额{{wxs.toPrice(item.newBalance)}}</view>
             </view>
             {{item.useBalance>0?'充值':'消费'}}
