--- a/front-end/mall4m/pages/balance/pages/user-balance-detail/user-balance-detail.wxss
+++ b/front-end/mall4m/pages/balance/pages/user-balance-detail/user-balance-detail.wxss
@@ -1,93 +1,101 @@
 /* pages/user-balance/user-balance.wxss */
 .pageHead {
-    box-sizing: border-box;
-    background-color: #fff;
-    z-index: 10;
-    box-sizing: border-box;
-    width: 100vw;
-    margin: 0 auto 0;
-    position: fixed;
+  box-sizing: border-box;
+  background-color: #fff;
+  z-index: 10;
+  box-sizing: border-box;
+  width: 100vw;
+  margin: 0 auto 0;
+  position: fixed;
 }
 
 .cardHead {
-    box-sizing: border-box;
-    margin-left: 5vw;
-    margin-top: 3vw;
-    width: 90vw;
-    padding: 4vw 5vw;
-    border-radius: 4vw 4vw 0 0;
-    height: 30vw;
-    background-color: #3c3b3b;
-    color: #545353;
-    font-size: 14px;
-    box-shadow: 0 0 3vw rgb(61, 60, 60);
+  box-sizing: border-box;
+  margin-left: 5vw;
+  margin-top: 3vw;
+  width: 90vw;
+  padding: 4vw 5vw;
+  border-radius: 4vw 4vw 0 0;
+  height: 30vw;
+  background-color: #3c3b3b;
+  color: #545353;
+  font-size: 14px;
+  box-shadow: 0 0 3vw rgb(61, 60, 60);
 }
 
 .cardNo {
-    display: flex;
-    justify-content: space-between;
+  display: flex;
+  justify-content: space-between;
 }
 
 .bananceNum {
-    font-size: 30px;
-    margin-top: 3vw;
+  font-size: 30px;
+  margin-top: 3vw;
 }
 
 .rechargeItem {
-    width: 28vw;
-    height: 20vw;
-    color: #000;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    border: solid 3px rgb(216, 215, 215);
-    border-radius: 0 4vw 0 0;
-    margin-right: 2.5vw;
-    margin-bottom: 2.5vw;
+  width: 28vw;
+  height: 20vw;
+  color: #000;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border: solid 3px rgb(216, 215, 215);
+  border-radius: 0 4vw 0 0;
+  margin-right: 2.5vw;
+  margin-bottom: 2.5vw;
 }
 
 .activeTab {
-    color: #000;
-    font-weight: bold;
-    position: relative;
-    z-index: 10;
+  color: #000;
+  font-weight: bold;
+  position: relative;
+  z-index: 10;
 }
 
 .activeTab::after {
-    width: 100%;
-    content: " ";
-    display: block;
-    height: 1.5vw;
-    position: absolute;
-    bottom: 0vw;
-    background-color: rgb(248, 201, 70);
-    z-index: -1;
+  width: 100%;
+  content: " ";
+  display: block;
+  height: 1.5vw;
+  position: absolute;
+  bottom: 0vw;
+  background-color: rgb(248, 201, 70);
+  z-index: -1;
 }
 
 .consumeList {
-    position: relative;
-    top: 0vw;
-    z-index: 1;
+  position: relative;
+  top: 0vw;
+  z-index: 1;
 }
 
 .consumeItem {
-    box-sizing: border-box;
-    width: 94vw;
-    margin: 0 auto;
-    padding: 3vw 4vw;
-    display: flex;
-    justify-content: space-between;
-    background-color: #eee;
-    border-radius: 2vw;
-    align-items: center;
+  box-sizing: border-box;
+  width: 94vw;
+  margin: 0 auto;
+  padding: 3vw 4vw;
+  display: flex;
+  justify-content: space-between;
+  background-color: #eee;
+  border-radius: 2vw;
+  align-items: center;
+  font-size: xx-small;
 }
 
 .consumeItem:nth-child(2n) {
-    background-color: #fff;
+  background-color: #fff;
 }
 
 .consumeDate {
-    color: rgb(139, 138, 138);
-    font-size: 14px;
+  color: rgb(139, 138, 138);
+  font-size: 14px;
+}
+.red {
+  color: #ff0000;
+}
+
+.green {
+  color: #00ff00;
 }
