--- a/front-end/mall4m/pages/prods/pages/prod/prod.wxml
+++ b/front-end/mall4m/pages/prods/pages/prod/prod.wxml
@@ -9,9 +9,9 @@
         <view class="activeBar" style="left:{{left}}">
         </view>
     </view>
-    <scroll-view class="scroll-view" scroll-y style="height: calc(100vh - 10vw - 60px);margin-top:10vw;box-sizing: border-box; overflow: auto;">
+    <scroll-view class="scroll-view" bindscroll="scroll" scroll-with-animation scroll-into-view="{{toView}}" scroll-y style="height: calc(100vh - 10vw - 60px);margin-top:10vw;box-sizing: border-box; overflow: auto;">
         <!-- 轮播图 -->
-        <view class="basicInfo">
+        <view class="basicInfo" id="part1">
             <swiper indicator-dots="{{indicatorDots}}" autoplay="{{autoplay}}" indicator-color="{{indicatorColor}}" interval="{{interval}}" duration="{{duration}}" indicator-active-color="{{indicatorActiveColor}}">
                 <block wx:for="{{imgs}}" wx:key='*this'>
                     <swiper-item>
@@ -68,14 +68,14 @@
             <view class="more">...</view>
         </view>
         <!-- 商品详情 -->
-        <view class="prod-detail detailInfo">
+        <view class="prod-detail detailInfo" id="part2">
             <view>
                 <rich-text nodes="{{content}}"></rich-text>
                 <!-- <image src="//img14.360buyimg.com/cms/jfs/t1/25195/1/9487/388554/5c7f80a5E8b8f8f0c/46818404849d6ec6.jpg!q70.dpg" mode="widthFix"></image> -->
             </view>
         </view>
         <!-- 评价 -->
-        <view class='cmt-wrap  commentsInfo' style="{{left=='11.5%'?'display:none':''}}">
+        <view class='cmt-wrap  commentsInfo' id="part3" style="{{left=='11.5%'?'display:none':''}}">
             <view class="cmt-tit" bindtap='showComment'>
                 <view class="cmt-t">
                     评价
