--- a/front-end/mall4m/pages/user-info/pages/myTicket/myTicket.wxss
+++ b/front-end/mall4m/pages/user-info/pages/myTicket/myTicket.wxss
@@ -1,5 +1,5 @@
 /* pages/user-info/pages/myTicket/myTicket.wxss */
-.container{min-height: 100vh;}
+.container{min-height: 100vh;background-color: #eee;}
 .tabItems{
     height: 40px; 
     background-color: #fff; 
@@ -23,19 +23,43 @@
 }
 .couponItem{
     box-sizing: border-box;
+    padding:0 3vw;
     margin: 0 auto 4vw;
     width:92vw;
-    min-height:38vw; 
-    background-color: rgb(228, 191, 111);
+    min-height:34vw; 
+    background-color: #fff;
     border-radius: 4vw;
     color:#fff;
     position: relative;
     top:40px;
+    box-shadow: 0px 0px 5px 3px rgba(0,0,0,0.1);
 }
 .couponName{
-    font-size: 20px; 
+    font-size: 18px; 
+    color:rgb(75, 74, 74);
+    display: flex;
+    align-items: center;
+}
+.ticketType{
+    background-color: rgb(250, 196, 78);
     color:#fff;
-    padding:4vw 4vw 0;
+    font-size: 12px; 
+    padding:0 1vw; 
+    border-radius: 2px;
+}
+.couponDigital{
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+.btnCoupon{
+    margin-top: 3vw;
+    box-sizing: border-box;
+    border:solid 1px rgb(211, 211, 211);
+    padding:0 5vw;
+    height: 10vw;
+    border-radius:5vw;
+    line-height: 10vw;
+    text-align: center;
+    color:#999
 }
 .couponRange{
     padding:2vw 4vw;
