--- a/front-end/mall4m/components/production/production.wxss
+++ b/front-end/mall4m/components/production/production.wxss
@@ -4,7 +4,7 @@ prod{box-sizing: border-box;}
   width: 45.5vw;
   background: #fff;
   box-sizing: border-box;
-  border: solid 1px #eee;
+  /* border: solid 1px #eee; */
   border-radius: 3vw;
   overflow: hidden;
 }
@@ -18,20 +18,20 @@ prod:nth-child(2n) .prod-items {
 }
 
 .hot-imagecont .hotsaleimg {
-    width:45vw;
+    width:100%;
     height:45vw;
     border-radius: 2vw 2vw 0 0;
 }
 
 .hot-text .hotprod-text {
   font-size: 28rpx;
-  display: -webkit-box;
-  word-break: break-all;
+  /* display: -webkit-box; */
+  white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
-  display: -webkit-box;
-  -webkit-line-clamp: 2;
-  -webkit-box-orient: vertical;
+  /* display: -webkit-box; */
+  /* -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical; */
   color: #000;
 }
 
