--- a/front-end/mall4m/pages/index/index.wxss
+++ b/front-end/mall4m/pages/index/index.wxss
@@ -231,8 +231,8 @@ swiper.pic-swiper .banner {
 .up-to-date .item-cont {
   margin: auto;
   height: auto;
-  width: calc(100% - 40rpx);
-  padding: 0 20rpx;
+  /* width: calc(100% - 40rpx); */
+  padding: 0 10rpx;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
@@ -253,8 +253,8 @@ swiper.pic-swiper .banner {
 }
 
 .up-to-date .item-cont .prod-item {
-  border-radius: 4rpx;
-  width: 300rpx;
+  border-radius: 12rpx;
+  width: 340rpx;
   background: #fff;
   display: inline-block;
   margin-bottom: 20rpx;
@@ -264,11 +264,12 @@ swiper.pic-swiper .banner {
 .up-to-date .item-cont .prod-item .imagecont {
   width: 100%;
   font-size: 0;
+  height: 330rpx;
 }
 
 .up-to-date .item-cont .prod-item .imagecont .prodimg {
-  width: 300rpx;
-  height: 300rpx;
+  width: 100%;
+  max-height: 330rpx;
   vertical-align: middle;
   border-top-left-radius: 10rpx;
   border-top-right-radius: 10rpx;
@@ -281,13 +282,16 @@ swiper.pic-swiper .banner {
   overflow: hidden;
   margin: 10rpx 0;
   /* height: 68rpx; */
-  display: -webkit-box;
-  word-break: break-all;
-  display: -webkit-box;
-  -webkit-line-clamp: 2;
-  -webkit-box-orient: vertical;
+  /* display: -webkit-box; */
+  /* word-break: break-all; */
+  /* display: -webkit-box; */
+  /* -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical; */
   color: #000;
   padding: 0 10rpx;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  width: 320rpx;
 }
 
 .up-to-date .item-cont .prod-item .prod-price {
